--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ build-backend = "pdm.backend"
 [tool.pdm.dev-dependencies]
 dev = [
     "pyinstaller>=5.13.2",
+    "pylint>=2.17.5",
+    "black>=23.9.1",
+    "pyright>=1.1.326",
+    "isort>=5.12.0",
 ]
 
 [project.scripts]
