--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,15 @@ dev = [
     "black>=23.9.1",
     "pyright>=1.1.326",
     "isort>=5.12.0",
+    "pytest>=7.4.2",
 ]
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = ""
+testpaths = ["tests/lib.py"]
+python_classes = "*Suite"
+python_functions = "tfn*"
 
 [project.scripts]
 cacca = "cacca.cli:main"
