--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,7 +28,8 @@ jobs:
 
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
+          pip install pdm
+          pdm install
 
       - name: Analysing The Code With pylint
         run: pylint $(git ls-files '*.py')
