--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,4 +26,4 @@ jobs:
           pdm install
 
       - name: Analysing The Code With pylint
-        run: pylint $(git ls-files '*.py')
+        run: pdm run pylint $(git ls-files '*.py')
