docs: init vitepress documentation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "repository": {
     "type": "git",
@@ -25,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/airscripts/cacca/issues"
   },
-  "homepage": "https://github.com/airscripts/cacca#readme"
+  "homepage": "https://github.com/airscripts/cacca#readme",
+  "devDependencies": {
+    "vitepress": "^1.0.0-rc.22"
+  }
 }
