--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "cacca"
-version = "0.1.1"
-description = "A cumulative hierarchy framework, easy as shit."
+version = "1.0.0"
+description = "A workflow framework, easy as shit."
 authors = [
     {name = "Airscript", email = "francesco@airscript.it"},
 ]
